--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- displays site properly based on user's device -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./css/estilos.css">
+		<link rel="stylesheet" href="./css/estilos.css" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;800&family=Outfit:wght@400;600&display=swap"
 			rel="stylesheet"
@@ -27,21 +26,17 @@
 		</style>
 	</head>
 	<body>
+		<main class="contenedor">
+			<article class="img-qr"><img src="./images/image-qr-code.png" alt="qr-code" /></article>
+			<h1>Improve your front-end skills by building projects</h1>
 
-    <div class="contenedor">
-      <div class="img-qr"><img src="./images/image-qr-code.png" alt="qr code"></div>
-      <h1>Improve your front-end skills by building projects</h1>
+			<p>Sca n the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+		</main>
 
-      <p>	 Scan the QR code to visit Frontend Mentor and
-        take your coding skills to the next level</p>
-
-    </div>
-	
-
-		<div class="attribution">
+		<footer class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
 			Coded by <a href="#">Sail Guerrero</a>.
-		</div>
+		</footer>
 	</body>
 </html>
